--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "Stream images through vintage filters.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/.bin/gulp test"
   },
   "author": "Lochlan Bunn <loklaan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "coffee-script": "^1.8.0",
     "debug": "^2.1.0",
     "gm": "^1.16.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
     "gulp": "^3.8.9",
     "gulp-coffee": "^2.2.0",
     "gulp-coffeelint": "^0.4.0",
