--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Stream images through vintage filters.",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/.bin/gulp test"
+    "test": "node ./node_modules/.bin/mocha tests/*.test.coffee --require coffee-script/register --compilers coffee:coffee-script/register"
   },
   "author": "Lochlan Bunn <loklaan@gmail.com>",
   "license": "MIT",
